--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,4 +12,5 @@ FROM nginx:alpine
 COPY /nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /app/build /usr/share/nginx/html
 EXPOSE 80
+EXPOSE 443
 CMD ["nginx", "-g", "daemon off;"]
