--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "remove-node-modules": "^1.7.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
